Flesh out and make consistent env var substitution

--- a/ldms/etc/Makefile.am
+++ b/ldms/etc/Makefile.am
@@ -12,12 +12,7 @@ SUBDIRS =
 # systemd config files
 SUBDIRS += systemd
 
-do_subst = sed -e 's,[@]datadir[@],$(datadir),g' \
-	   -e 's,[@]localstatedir[@],$(localstatedir),g' \
-	   -e 's,[@]sysconfdir[@],$(sysconfdir),g' \
-	   -e 's,[@]LDMSD_PLUGIN_LIBPATH[@],$(LDMSD_PLUGIN_LIBPATH),g' \
-	   -e 's,[@]ZAP_LIBPATH[@],$(ZAP_LIBPATH),g' \
-	   -e 's,[@]sbindir[@],$(sbindir),g'
+do_subst = @LDMS_SUBST_RULE@
 
 EXTRA_DIST = ldmsauth.conf \
 	     ldmsplugin.sampler.conf \
