--- a/ldms/src/ovis-ldms-configvars.sh.in
+++ b/ldms/src/ovis-ldms-configvars.sh.in
@@ -1,6 +1,24 @@
 #!/bin/sh
+ovis_ldms_plugins=@pkglibdir@
+ovis_ldms_mandir=@mandir@
+ovis_ldms_localedir=@localedir@
+ovis_ldms_libdir=@libdir@
+ovis_ldms_psdir=@psdir@
+ovis_ldms_pdfdir=@pdfdir@
+ovis_ldms_dvidir=@dvidir@
+ovis_ldms_htmldir=@htmldir@
+ovis_ldms_infodir=@infodir@
+ovis_ldms_docdir=@docdir@
+ovis_ldms_includedir=@includedir@
+ovis_ldms_localstatedir=@localstatedir@
+ovis_ldms_sharedstatedir=@sharedstatedir@
+ovis_ldms_sysconfdir=@sysconfdir@
+ovis_ldms_datadir=@datadir@
+ovis_ldms_datarootdir=@datarootdir@
+ovis_ldms_libexecdir=@libexecdir@
+ovis_ldms_sbindir=@sbindir@
+ovis_ldms_bindir=@bindir@
 ovis_ldms_prefix=@prefix@
 ovis_ldms_exec_prefix=@exec_prefix@
-ovis_ldms_libdir=@libdir@
 ovis_ldms_pkglibdir=@pkglibdir@
-ovis_ldms_plugins=@pkglibdir@
+ovis_ldms_pythondir=@pythondir@
