--- a/lib/etc/ld.so.conf.d/Makefile.am
+++ b/lib/etc/ld.so.conf.d/Makefile.am
@@ -1,12 +1,6 @@
 EXTRA_DIST = ovis-ld-so.conf.in
 
-do_subst = sed -e 's,[@]datadir[@],$(datadir),g' \
-	   -e 's,[@]localstatedir[@],$(localstatedir),g' \
-	   -e 's,[@]libdir[@],$(libdir),g' \
-	   -e 's,[@]sysconfdir[@],$(sysconfdir),g' \
-	   -e 's,[@]pythondir[@],$(pythondir),g' \
-	   -e 's,[@]bindir[@],$(bindir),g' \
-	   -e 's,[@]sbindir[@],$(sbindir),g'
+do_subst = @LIB_SUBST_RULE@
 
 ovis-ld-so.conf: ovis-ld-so.conf.in
 	$(do_subst) < $< > $@
