--- a/lib/etc/ovis/Makefile.am
+++ b/lib/etc/ovis/Makefile.am
@@ -1,13 +1,7 @@
 EXTRA_DIST = ovis-functions.sh \
 	     set-ovis-variables.sh.in
 
-do_subst = sed -e 's,[@]datadir[@],$(datadir),g' \
-	   -e 's,[@]localstatedir[@],$(localstatedir),g' \
-	   -e 's,[@]sysconfdir[@],$(sysconfdir),g' \
-	   -e 's,[@]pythondir[@],$(pythondir),g' \
-	   -e 's,[@]libdir[@],$(libdir),g' \
-	   -e 's,[@]bindir[@],$(bindir),g' \
-	   -e 's,[@]sbindir[@],$(sbindir),g'
+do_subst = @LIB_SUBST_RULE@
 
 set-ovis-variables.sh: set-ovis-variables.sh.in
 	$(do_subst) < $< > $@
