--- a/lib/src/ovis-lib-configvars.sh.in
+++ b/lib/src/ovis-lib-configvars.sh.in
@@ -1,6 +1,24 @@
 #!/bin/sh
+ovis_lib_plugins=@pkglibdir@
+ovis_lib_mandir=@mandir@
+ovis_lib_localedir=@localedir@
+ovis_lib_libdir=@libdir@
+ovis_lib_psdir=@psdir@
+ovis_lib_pdfdir=@pdfdir@
+ovis_lib_dvidir=@dvidir@
+ovis_lib_htmldir=@htmldir@
+ovis_lib_infodir=@infodir@
+ovis_lib_docdir=@docdir@
+ovis_lib_includedir=@includedir@
+ovis_lib_localstatedir=@localstatedir@
+ovis_lib_sharedstatedir=@sharedstatedir@
+ovis_lib_sysconfdir=@sysconfdir@
+ovis_lib_datadir=@datadir@
+ovis_lib_datarootdir=@datarootdir@
+ovis_lib_libexecdir=@libexecdir@
+ovis_lib_sbindir=@sbindir@
+ovis_lib_bindir=@bindir@
 ovis_lib_prefix=@prefix@
 ovis_lib_exec_prefix=@exec_prefix@
-ovis_lib_libdir=@libdir@
 ovis_lib_pkglibdir=@pkglibdir@
-ovis_lib_plugins=@pkglibdir@
+ovis_lib_pythondir=@pythondir@
