--- a/util/sample_init_scripts/genders/systemd/services/Makefile.am
+++ b/util/sample_init_scripts/genders/systemd/services/Makefile.am
@@ -5,9 +5,7 @@ doc_DATA=ldmsd.service ldmsd@.service README.ldmsd
 
 EXTRA_DIST = ldmsd.service.in ldmsd@.service.in
 
-do_subst = sed \
-	-e 's,[@]localstatedir[@],$(localstatedir),g' \
-	-e 's,[@]bindir[@],$(bindir),g'
+do_subst = @OVIS_SUBST_RULE@
 
 ldmsd.service: ldmsd.service.in
 	$(do_subst) < $< > $@
