--- a/ldms/src/Makefile.am
+++ b/ldms/src/Makefile.am
@@ -5,11 +5,7 @@ EXTRA_DIST=ovis-ldms-configvars.sh.in
 CLEANFILES = ovis-ldms-configvars.sh
 DISTCLEANFILES = $(nobase_include_HEADERS)
 
-do_subst = sed \
-	-e 's,[@]prefix[@],$(prefix),g' \
-	-e 's,[@]exec_prefix[@],$(exec_prefix),g' \
-	-e 's,[@]libdir[@],$(libdir),g' \
-	-e 's,[@]pkglibdir[@],$(pkglibdir),g'
+do_subst = @LDMS_SUBST_RULE@
 
 %.sh: %.sh.in
 	$(do_subst) < $< > $@
