Relative include for sampler_base.h in aries_mmr
The include path specified for the aries_mmr sampler
was relative and did not have $(srcdir). This caused
it to break on some platforms after the merge.

--- a/ldms/src/sampler/aries_mmr/Makefile.am
+++ b/ldms/src/sampler/aries_mmr/Makefile.am
@@ -5,7 +5,7 @@ CORE = ../../core
 AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I../.. @OVIS_LIB_INCDIR_FLAG@
 AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@
 BASE_SRC = ../sampler_base.h ../sampler_base.c
-BASE_INC = ../
+BASE_INC = $(srcdir)/../
 
 # libgpcdlocal and headers are *NOT* part of LDMS and should be elsewhere on your system
 # Specific packagings of ldms (cray) may for convenience include source and binaries of libgpcdlocal
