lib: Add a third-party C-library to parse json format

--- a/lib/src/third/Makefile.am
+++ b/lib/src/third/Makefile.am
@@ -29,3 +29,5 @@ city_test_SOURCES = city-test.c
 city_test_CFLAGS = -msse4.2 -O3 -DCITYSLIM
 city_test_LDFLAGS = -static
 city_test_LDADD = ../third/libovis_third.la
+
+SUBDIRS=json_parser
