--- a/ldms/scripts/ldms-meminfo.sh.in
+++ b/ldms/scripts/ldms-meminfo.sh.in
@@ -20,13 +20,6 @@ if test ! -x $BUILDDIR/sbin/ldmsd; then
 	echo "can't find ldmsd binary. set destdir in $0 before testing?"
 	exit 1
 fi
-if test ! -x $BUILDDIR/bin/ldmsd_controller; then
-	echo "can't find ldmsd_controller script. Included python in build?"
-	exit 1
-else
-	LC=$BUILDDIR/bin/ldmsd_controller
-	CSO="--sockname"
-fi
 
 case "x$USER" in
 	x)
@@ -65,14 +58,21 @@ in4=$SOCKDIR/in4
 LOGDIR=$TESTDIR/logs
 NOTICES=$LOGDIR/notices
 export LDMSD_PIDFILE=$TESTDIR/run/ldmsd.pid
-SECRET=$SOCKDIR/secret
 #export TSAN_OPTIONS=verbosity=1:log_path=$LOGDIR:strip_path_prefix=$prefix
 #export ASAN_OPTIONS=verbosity=1:log_path=$LOGDIR:detect_stack_use_after_return=1:detect_leaks=1:strip_path_prefix=$prefix
 export LDMSD_SOCKPATH=${TESTDIR}/run
 mkdir -p $STOREDIR $SOCKDIR $LOGDIR $LDMSD_SOCKPATH
+SECRET=$SOCKDIR/secret
 echo "secretword=crashtestdummy" > $SECRET
 export LDMS_AUTH_FILE=$SECRET
 chmod go-rwx $SECRET
+if test ! -x $BUILDDIR/bin/ldmsd_controller; then
+	echo "can't find ldmsd_controller script. Included python in build?"
+	exit 1
+else
+	LC="$BUILDDIR/bin/ldmsd_controller --auth_file=$SECRET"
+	CSO="--sockname"
+fi
 echo "logs and data stored under $TESTDIR"
 
 export LD_LIBRARY_PATH=${BUILDDIR}/lib:@libdir@:@pkglibdir@:@libeventpath@:$LD_LIBRARY_PATH
@@ -129,11 +129,12 @@ mkfifo $NOTICES.fifo
 cat $NOTICES.fifo &
 
 echo Starting daemons
-ldmsd -x sock:$port1 -S $SOCKDIR/metric_socket_1 -c $in1 -l ${LOGDIR}/1.txt -v DEBUG -r $TESTDIR/run/ldmsd.pid.1
+ldmsd -x sock:$port1 -p unix:$SOCKDIR/metric_socket_1 -c $in1 -l ${LOGDIR}/1.txt -v DEBUG -r $TESTDIR/run/ldmsd.pid.1
 die $?
 
-# valgrind -v --log-file=vg.log --track-origins=yes ldmsd -x sock:$port4 -S $SOCKDIR/metric_socldmsd -x sock:$port4 -S $SOCKDIR/metric_socket_4 -c $in4  -l ${LOGDIR}/4.txt -v DEBUG -r $TESTDIR/run/ldmsd.pid.4 &
-ldmsd -x sock:$port4 -S $SOCKDIR/metric_socket_4 -c $in4  -l ${LOGDIR}/4.txt -v DEBUG -r $TESTDIR/run/ldmsd.pid.4 &
+# valgrind -v --log-file=vg.log --track-origins=yes ldmsd -x sock:$port4 -p unix:$SOCKDIR/metric_soc
+#ldmsd -x sock:$port4 -p unix:$SOCKDIR/metric_socket_4 -c $in4  -l ${LOGDIR}/4.txt -v DEBUG -r $TESTDIR/run/ldmsd.pid.4 &
+ldmsd -x sock:$port4 -p unix:$SOCKDIR/metric_socket_4 -c $in4  -l ${LOGDIR}/4.txt -v DEBUG -r $TESTDIR/run/ldmsd.pid.4 &
 die $?
 #
 mysleep 5
