Fix llnl-edac build on Ubuntu

--- a/ldms/src/sampler/llnl/Makefile.am
+++ b/ldms/src/sampler/llnl/Makefile.am
@@ -7,7 +7,7 @@ AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I../.. @OVIS_LIB_INCDIR_FLAG@
 AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
 
 # common libadd for llnl samplers
-COMMON_LIBADD = $(CORE)/libldms.la
+COMMON_LIBADD = $(CORE)/libldms.la \
 		@LDFLAGS_GETTIME@ -lovis_util -lcoll
 
 if ENABLE_JOBID
