zap_sock - libevent removal (recv buffer)
Remove libevent from zap_sock. This patch implements message receive
buffer and send queue in zap_sock to replace the bufferevent from
libevent. The event notification bit of libevent is replaced by
ovis_event.

--- a/lib/src/zap/sock/Makefile.am
+++ b/lib/src/zap/sock/Makefile.am
@@ -1,8 +1,8 @@
 pkglib_LTLIBRARIES = libzap_sock.la
 
-AM_CFLAGS = -I$(srcdir)/../.. -I$(srcdir)/.. -I$(top_srcdir) @LIBEVENT_INCDIR_FLAG@ -I../..
+AM_CFLAGS = -I$(srcdir)/../.. -I$(srcdir)/.. -I$(top_srcdir) -I../..
 
 libzap_sock_la_SOURCES = zap_sock.c zap_sock.h
-libzap_sock_la_CFLAGS = $(AM_CFLAGS) 
-libzap_sock_la_LIBADD =  ../libzap.la ../../coll/libcoll.la
-libzap_sock_la_LDFLAGS = $(AM_LDFLAGS) @LIBEVENT_LIB64DIR_FLAG@ @LIBEVENT_LIBDIR_FLAG@ $(EVENTLIBS) -pthread
+libzap_sock_la_CFLAGS = $(AM_CFLAGS)
+libzap_sock_la_LIBADD =  ../libzap.la ../../coll/libcoll.la ../../ovis_event/libovis_event.la
+libzap_sock_la_LDFLAGS = $(AM_LDFLAGS) -pthread
