Refactor ldmsctl to support aggregator configuration commands
This change also makes ldmsctl compatible with ldmsd record boundary protocol.

--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -1,5 +1,4 @@
-#sbin_PROGRAMS = ldmsd ldms_ls ldmsctl
-sbin_PROGRAMS = ldmsd ldms_ls
+sbin_PROGRAMS = ldmsd ldms_ls ldmsctl
 if ENABLE_SOS
 sbin_PROGRAMS += ldmsd_sos_init
 endif
