--- a/lib/src/zap/ugni/Makefile.am
+++ b/lib/src/zap/ugni/Makefile.am
@@ -1,10 +1,12 @@
 pkglib_LTLIBRARIES = libzap_ugni.la
 
-AM_CFLAGS = -I$(srcdir)/../ -I$(srcdir)/../../ @LIBEVENT_INCDIR_FLAG@ -I../..
+AM_CFLAGS = -I$(srcdir)/../ -I$(srcdir)/../../ -I../..
 
 # UGNI_CLFAGS and UGNI_LIBS are set by PKG_CHECK_MODULES in configure.ac
 
 libzap_ugni_la_SOURCES = zap_ugni.c zap_ugni.h
 libzap_ugni_la_CFLAGS = $(AM_CFLAGS) $(UGNI_CFLAGS) $(RCA_CFLAGS)
-libzap_ugni_la_LIBADD = ../libzap.la ../../coll/libcoll.la
-libzap_ugni_la_LDFLAGS = $(UGNI_LIBS) $(RCA_LIBS) @LIBEVENT_LIB64DIR_FLAG@ @LIBEVENT_LIBDIR_FLAG@ @EVENTLIBS@
+libzap_ugni_la_LIBADD = ../libzap.la \
+			../../coll/libcoll.la \
+			../../ovis_event/libovis_event.la
+libzap_ugni_la_LDFLAGS = $(UGNI_LIBS) $(RCA_LIBS)
