Isolate libgenders/boost dependency from systemd

--- a/util/sample_init_scripts/genders/Makefile.am
+++ b/util/sample_init_scripts/genders/Makefile.am
@@ -1,8 +1,11 @@
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts/genders
 
-if ENABLE_LIBGENDERS
+if ENABLE_TOSS_SYSTEMD
 SUBDIRS = src systemd sysv man examples
+if ENABLE_LIBGENDERS
+SUBDIRS += src
+endif
 endif
 
 dist_doc_DATA = \
