--- a/util/sample_init_scripts/genders/sysv/Makefile.am
+++ b/util/sample_init_scripts/genders/sysv/Makefile.am
@@ -1,6 +1,6 @@
 EXTRA_DIST = ldmsd-pre-sysvinit.in
 DISTCLEANFILES = ldmsd-pre-sysvinit
-if ENABLE_LIBGENDERS
+if ENABLE_TOSS_SYSTEMD
 SUBDIRS = etc
 bin_SCRIPTS= ldmsd-pre-sysvinit
 endif
