--- a/util/sample_init_scripts/genders/sysv/etc/init.d/Makefile.am
+++ b/util/sample_init_scripts/genders/sysv/etc/init.d/Makefile.am
@@ -4,7 +4,7 @@ docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts/genders/sysv/etc
 EXTRA_DIST = ldmsd.in ldmsd.template.in
 DISTCLEANFILES = ldmsd ldmsd.template
 
-if ENABLE_LIBGENDERS
+if ENABLE_TOSS_SYSTEMD
 dist_doc_DATA = \
 README \
 ldmsd \
