--- a/util/sample_init_scripts/genders/systemd/etc/sysconfig/Makefile.am
+++ b/util/sample_init_scripts/genders/systemd/etc/sysconfig/Makefile.am
@@ -1,7 +1,7 @@
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts/genders/systemd/etc/sysconfig
 
-if ENABLE_LIBGENDERS
+if ENABLE_TOSS_SYSTEMD
 SUBDIRS = ldms.d
 endif
 
