--- a/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ClusterSecrets/Makefile.am
+++ b/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ClusterSecrets/Makefile.am
@@ -1,7 +1,7 @@
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ClusterSecrets
 
-if ENABLE_LIBGENDERS
+if ENABLE_TOSS_SYSTEMD
 dist_doc_DATA = \
 README ldmsauth.conf
 endif
