PAPI - rename papi sampler

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -93,7 +93,7 @@ OPTION_DEFAULT_DISABLE([msr_interlagos], [ENABLE_MSR_INTERLAGOS])
 OPTION_DEFAULT_ENABLE([array_example], [ENABLE_ARRAY_EXAMPLE])
 OPTION_DEFAULT_DISABLE([perfevent], [ENABLE_PERFEVENT])
 OPTION_DEFAULT_DISABLE([rapl], [ENABLE_RAPL])
-OPTION_DEFAULT_DISABLE([papi], [ENABLE_PAPI])
+OPTION_DEFAULT_DISABLE([hweventpapi], [ENABLE_HWEVENTPAPI])
 OPTION_WITH([libpapi], [LIBPAPI])
 OPTION_DEFAULT_ENABLE([procinterrupts], [ENABLE_PROCINTERRUPTS])
 OPTION_DEFAULT_ENABLE([procnetdev], [ENABLE_PROCNETDEV])
