Fixup the systemctl configuration files for master

--- a/ldms/etc/systemd/ldmsd.aggregator.service.in
+++ b/ldms/etc/systemd/ldmsd.aggregator.service.in
@@ -30,7 +30,7 @@ Environment = HOSTNAME=%H
 ExecStartPre = /bin/mkdir -p @localstatedir@/run/ldmsd
 ExecStart = @sbindir@/ldmsd \
 		-x ${LDMSD_XPRT}:${LDMSD_PORT} \
-		-p ${LDMSD_CONFIG_PORT} \
+		-p sock:${LDMSD_CONFIG_PORT} \
 		-c ${LDMSD_PLUGIN_CONFIG_FILE} \
 		-a @sysconfdir@/ldms/ldmsauth.conf \
 		-r @localstatedir@/run/ldmsd/aggregator.pid
