--- a/ldms/etc/ldmsplugin.sampler.conf
+++ b/ldms/etc/ldmsplugin.sampler.conf
@@ -1,11 +1,4 @@
-# This is an example of ldmsplugin.conf
-
-# Load and config the popular meminfo sampler
+# Load the meminfo sampler
 load name=meminfo
-config name=meminfo producer=$HOSTNAME instance=meminfo
-start name=meminfo interval=2000000 offset=0
-
-# Load and config array_example sampler
-load name=array_example
-config name=array_example producer=$HOSTNAME instance=array_example
-start name=array_example interval=2000000 offset=0
+config name=meminfo producer=${HOSTNAME} instance=${HOSTNAME}/meminfo
+start name=meminfo interval=1000000 offset=0
