ldms_auth - pluggable authentication for LDMS
- ldms_auth plugin infrastructure.
- ldms_auth_none: the plugin that authenticate all endpoints as 0:0.
- ldms_auth_naive: the plugin that naively believe peer uid:gid
  declaration. This plugin is used primarily for testing.
- ldms_auth_ovis: the plugin that uses ovis_auth (secret word config
  file).
- new swig interface: LDMS_xprt_new_with_auth(xprt_name, auth_name,
  auth_opt_dict) to create ldms_xprt with ldms_auth in python.
- update ldms_ls, ldmsd, ldmsd_controller to utilize ldms_xprt with
  ldms_auth.
- ldmsd
  - ldmsd requests have permissions
  - config objects also have permissions and owner

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -484,6 +484,7 @@ OVIS_EXEC_SCRIPTS(
 
 AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile
 		 swig/Makefile
+		 src/auth/Makefile
 		 src/store/Makefile src/sampler/Makefile
 		 src/sampler/lustre/Makefile
 		 src/sampler/job_info/Makefile
