--- a/ldms/swig/Makefile.am
+++ b/ldms/swig/Makefile.am
@@ -12,7 +12,10 @@ _ldms_la_SOURCES = $(SWIG_SOURCES)
 nodist__ldms_la_SOURCES = ldms.c
 _ldms_la_CFLAGS = -g $(SWIG_PYTHON_CPPFLAGS) -I$(top_srcdir)/src/core \
 		 -I../src @OVIS_LIB_INCDIR_FLAG@
-_ldms_la_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@  $(PYTHON_LDFLAGS) -module
+_ldms_la_LDFLAGS = -lovis_util \
+		   @OVIS_LIB_LIBDIR_FLAG@ \
+		   @OVIS_LIB_LIB64DIR_FLAG@ \
+		   $(PYTHON_LDFLAGS) -module
 _ldms_la_LIBADD = $(top_builddir)/src/core/libldms.la -lpthread
 
 ldms.py : ldms.c
