replace gmakeism with autotool equivalent

--- a/ldms/src/sampler/job_info_slurm/Makefile.am
+++ b/ldms/src/sampler/job_info_slurm/Makefile.am
@@ -5,13 +5,6 @@ CORE = ../../core
 AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) @OVIS_LIB_INCDIR_FLAG@
 AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
 
-ZDEFS = -Wl,-z,defs -Wl,-z=defs
-
-CFLAGS := $(filter-out $(ZDEFS),$(CFLAGS))
-AM_CFLAGS := $(filter-out $(ZDEFS),$(AM_CFLAGS))
-LDFLAGS := $(filter-out $(ZDEFS),$(LDFLAGS))
-AM_LDFLAGS := $(filter-out $(ZDEFS),$(AM_LDFLAGS))
-
 COMMON_LIBADD = $(CORE)/libldms.la
 		@LDFLAGS_GETTIME@ -lovis_util -lcoll
 
@@ -20,4 +13,5 @@ libjobinfo_slurm_la_SOURCES = jobinfo_slurm.c ../job_info/jobinfo.h
 libjobinfo_slurm_la_LIBADD = $(COMMON_LIBADD)
 libjobinfo_slurm_la_CFLAGS = $(AM_CFLAGS) $(SLURM_INCDIR_FLAG) \
 	-I$(top_srcdir)/src/sampler/job_info -DSYSCONFDIR='"$(sysconfdir)"'
+libjobinfo_slurm_la_LDFLAGS = -module
 pkglib_LTLIBRARIES += libjobinfo_slurm.la
