--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -4,11 +4,12 @@ SUBDIRS = .
 pkglib_LTLIBRARIES =
 CORE = ../core
 
-AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I.. @OVIS_LIB_INCDIR_FLAG@
+AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I.. @OVIS_LIB_INCDIR_FLAG@ \
+	    -I$(srcdir)/../ldmsd
 AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
 COMMON_LIBADD = $(CORE)/libldms.la @LDFLAGS_GETTIME@ -lovis_util
 ldmssamplerincludedir = $(includedir)/ldms/sampler
-ldmssamplerinclude_HEADERS = 
+ldmssamplerinclude_HEADERS =
 BASE_SRC=sampler_base.c sampler_base.h
 
 if ENABLE_JOBID
