--- a/ldms/src/sampler/job_info/Makefile.am
+++ b/ldms/src/sampler/job_info/Makefile.am
@@ -4,7 +4,7 @@ dist_man7_MANS=
 CORE = ../../core
 SAMPLER= ../../sampler
 AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) @OVIS_LIB_INCDIR_FLAG@ \
-	    -I../../
+	    -I../../ -I$(srcdir)/../../ldmsd
 AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
 
 COMMON_LIBADD = $(CORE)/libldms.la \
