--- a/ldms/src/store/Makefile.am
+++ b/ldms/src/store/Makefile.am
@@ -18,7 +18,7 @@ endif
 if ENABLE_SOS
 libstore_sos_la_SOURCES = store_sos.c
 libstore_sos_la_CFLAGS = @SOS_INCDIR_FLAG@ $(AM_CFLAGS)
-libstore_sos_la_LIBADD = -lsos @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@ $(STORE_LIBADD)
+libstore_sos_la_LIBADD = @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@ $(STORE_LIBADD) -lsos
 pkglib_LTLIBRARIES += libstore_sos.la
 endif
 
