--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -16,6 +16,7 @@ ldms_auth_naive.man \
 ldms_quickstart.man \
 ldms_sampler_base.man \
 Plugin_aries_mmr.man \
+Plugin_array_example.man \
 Plugin_cray_system_sampler_variants.man \
 Plugin_cray_dvs_sampler.man \
 Plugin_kgnilnd.man \
