--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -15,6 +15,7 @@ ldms_auth_ovis.man \
 ldms_auth_naive.man \
 ldms_quickstart.man \
 ldms_sampler_base.man \
+Plugin_aries_linkstatus.man \
 Plugin_aries_mmr.man \
 Plugin_array_example.man \
 Plugin_cray_system_sampler_variants.man \
