--- a/ldms/src/store/Makefile.am
+++ b/ldms/src/store/Makefile.am
@@ -30,7 +30,7 @@ pkglib_LTLIBRARIES += libstore_flatfile.la
 endif
 
 if ENABLE_RABBITV3
-libstore_rabbitv3_la_SOURCES = store_rabbitv3.c rabbit_utils.c
+libstore_rabbitv3_la_SOURCES = store_rabbitv3.c rabbit_utils.c rabbit_utils.h
 libstore_rabbitv3_la_CFLAGS = $(AM_CFLAGS)
 libstore_rabbitv3_la_LIBADD = -lrabbitmq $(STORE_LIBADD)
 pkglib_LTLIBRARIES += libstore_rabbitv3.la
