ldms - ldms_auth_munge authentication plugin

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -155,6 +155,10 @@ OPTION_WITH([cray-hss-devel], [CRAY_HSS_DEVEL],[/usr])
 # for aries_mmr
 OPTION_ARIES_MMR
 
+dnl munge
+OPTION_DEFAULT_DISABLE([munge], [ENABLE_MUNGE])
+OPTION_WITH([munge], [MUNGE])
+
 OPTION_DEFAULT_ENABLE([ovis-lib], [ENABLE_OVIS_LIB])
 OPTION_WITH_OR_BUILD([ovis-lib],[../lib/src],[mmalloc third coll ovis_util zap ovis_ctrl ovis_event ovis_auth third/json_parser],[ovis-auth.sh],[ovis-lib],[ovis_auth])
 dnl substitute values we need from ovis-auth.sh during joint configure
