--- a/ldms/src/auth/Makefile.am
+++ b/ldms/src/auth/Makefile.am
@@ -26,3 +26,17 @@ libldms_auth_ovis_la_LIBADD = ../core/libldms.la \
 			       @OVIS_LIB_LIB64DIR_FLAG@ \
 			       @OVIS_LIB_LIBDIR_FLAG@
 lib_LTLIBRARIES += libldms_auth_ovis.la
+
+if ENABLE_MUNGE
+libldms_auth_munge_la_SOURCES = ldms_auth_munge.c
+libldms_auth_munge_la_CFLAGS = $(AM_CFLAGS) \
+			       @MUNGE_INCDIR_FLAG@
+libldms_auth_munge_la_LIBADD = ../core/libldms.la \
+			       -lovis_util \
+			       -lmunge \
+			       @MUNGE_LIB64DIR_FLAG@ \
+			       @MUNGE_LIBDIR_FLAG@ \
+			       @OVIS_LIB_LIB64DIR_FLAG@ \
+			       @OVIS_LIB_LIBDIR_FLAG@
+lib_LTLIBRARIES += libldms_auth_munge.la
+endif
