lnet_stats updated to use sampler_base. test before merging.

--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -137,7 +137,7 @@ endif
 
 if ENABLE_LNET_STATS
 liblnet_stats_la_SOURCES = lnet_stats.c $(BASE_SRC)
-liblnet_stats_la_LIBADD = $(COMMON_LIBADD) $(JOBID_LIBFLAGS)
+liblnet_stats_la_LIBADD = $(COMMON_LIBADD)
 pkglib_LTLIBRARIES += liblnet_stats.la
 endif
 
